--- a/Angular-Auth/package.json
+++ b/Angular-Auth/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
+    "@angular/animations": "^8.1.3",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "angular-bootstrap-toasts": "^1.1.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.1",
+    "ng-bootstrap-spinner": "^1.2.0",
+    "ngx-toast-notifications": "^1.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
